Show country in dropdown upon selection

--- a/Yucca.Web/Components/Pages/Suppliers.razor
+++ b/Yucca.Web/Components/Pages/Suppliers.razor
@@ -262,6 +262,7 @@ else
     private async Task SelectSupplier(string id)
     {
         _supplier = await SupplierService.GetSupplierById(id);
+        selectedCountry = _supplier.Country.IsoCode;
         _isNewSupplier = false;
 
         StateHasChanged();
