Add CSV export feature for supplier data
Introduced a new feature to export supplier data as a CSV file in the Blazor application. Added an "Export" button in `Suppliers.razor` to trigger the `ExportCsv` method. Implemented the `ExportCsv` method in `Suppliers.razor.cs` to format supplier data into CSV, encode it in base64, and download it using JavaScript interop. Added `EscapeCsv` helper method for CSV formatting. Created `blazorDownloadFile` function in `dataExport.js` to handle file download in the browser.

--- a/Yucca.Web/Components/Pages/Suppliers.razor
+++ b/Yucca.Web/Components/Pages/Suppliers.razor
@@ -169,6 +169,11 @@ else
             <button type="button" class="@buttonStyle" @onclick="ClearForm">
                 Clear
             </button>
+            <button type="button" class="@buttonStyle" @onclick="ExportCsv">
+                Export
+            </button>
         </div>
     </form>
 }
+
+<script src="@Assets["js/dataExport.js"]"></script>
