Add notification system and improve UI feedback
Implemented a notification system using `NotificationService` and `NotificationHost` to replace JavaScript alerts with styled notifications. Updated `MainLayout.razor` to include `NotificationHost` for interactive server-side notifications.

--- a/Yucca.Web/Components/Pages/Suppliers.razor
+++ b/Yucca.Web/Components/Pages/Suppliers.razor
@@ -2,12 +2,11 @@
 @using Newtonsoft.Json
 @using Yucca.Inventory
 @using Yucca.Web.Services
-@using Microsoft.AspNetCore.Components.Web
-@using Yucca.Web.Components.Shared.Icons
 @implements IDisposable
 
 @inject SupplierService SupplierService
 @inject IJSRuntime JSRuntime
+@inject NotificationService NotificationService
 
 @rendermode InteractiveServer
 @attribute [StreamRendering(true)]
