--- a/Yucca.Web/Components/_Imports.razor
+++ b/Yucca.Web/Components/_Imports.razor
@@ -9,4 +9,7 @@
 @using Microsoft.JSInterop
 @using Yucca.Web
 @using Yucca.Web.Components
+@using Yucca.Web.Components.Layout
+@using Yucca.Web.Components.Shared
 @using Yucca.Web.Components.Shared.Icons
+@using System.Timers
